--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,29 @@ spring.application.name=spark-poc
 #novopay.platform.master.datasource.username=yugabyte
 #novopay.platform.master.datasource.password=yugabyte
 #jdbc:postgresql://192.168.33.172:6433/mfi_ppd
+
+#
+#novopay.platform.master.datasource.protocol=jdbc
+#novopay.platform.master.datasource.subprotocol=postgresql
+#novopay.platform.master.datasource.host=172.31.3.156
+#novopay.platform.master.datasource.port=5433
+#novopay.platform.master.datasource.db=mfi_perf
+#novopay.platform.master.datasource.username=bibek
+#novopay.platform.master.datasource.password=bibek@123
+
 novopay.platform.master.datasource.protocol=jdbc
 novopay.platform.master.datasource.subprotocol=postgresql
-novopay.platform.master.datasource.host=192.168.33.172
-novopay.platform.master.datasource.port=6433
-novopay.platform.master.datasource.db=mfi_ppd
+novopay.platform.master.datasource.host=172.31.2.209
+novopay.platform.master.datasource.port=5433
+novopay.platform.master.datasource.db=mfi_qa5
 novopay.platform.master.datasource.username=qateam
 novopay.platform.master.datasource.password=qateam@123
+
+#novopay.platform.master.datasource.host=localhost
+#novopay.platform.master.datasource.port=5433
+#novopay.platform.master.datasource.db=yugabyte
+#novopay.platform.master.datasource.username=yugabyte
+#novopay.platform.master.datasource.password=yugabyte
 clickhouse.url=jdbc:clickhouse://localhost:8123/default
 clickhouse.username=default
 clickhouse.password=
