--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,15 @@ novopay.platform.master.datasource.db=mfi_qa5
 novopay.platform.master.datasource.username=qateam
 novopay.platform.master.datasource.password=qateam@123
 
+
+#novopay.platform.master.datasource.protocol=jdbc
+#novopay.platform.master.datasource.subprotocol=postgresql
+#novopay.platform.master.datasource.host=localhost
+#novopay.platform.master.datasource.port=5433
+#novopay.platform.master.datasource.db=yugabyte
+#novopay.platform.master.datasource.username=yugabyte
+#novopay.platform.master.datasource.password=yugabyte
+
 #novopay.platform.master.datasource.host=localhost
 #novopay.platform.master.datasource.port=5433
 #novopay.platform.master.datasource.db=yugabyte
@@ -33,7 +42,10 @@ novopay.platform.master.datasource.password=qateam@123
 #novopay.platform.master.datasource.password=yugabyte
 clickhouse.url=jdbc:clickhouse://localhost:8123/default
 clickhouse.username=default
-clickhouse.password=
+clickhouse.password=admin
+
+kafka.bootstrap.servers=localhost:9092
+
 
 spark.eventLog.enabled=true
 spark.eventLog.dir=C://Users//veeresh//Desktop//Reports//SPARK//logs//spark-events
